# SBG_EllipseD_Speedometer

./: .gitignore  README.md  build_exe.ps1  build_version.py  logger_speed.spec  pyproject.toml  requirements.txt  run.py  version.json
app/: __init__.py  _version.py  config.py  main.py  version.py
app/core/: data_logger.py  ins_controller.py
app/widgets/: console_panel.py  gps_display.py  log_control.py  speed_gauge.py  speed_plot.py
sbg_ellipsd/: __init__.py  interface.py
sbg_ellipsd/enums/: __init__.py  aiding_status.py  com_status.py  ekf_status.py  event_status.py  general_status.py  gps_status.py  imu_status.py  mag_status.py  ship_motion_status.py  utc_status.py
sbg_ellipsd/messages/: __init__.py  air_data.py  depth.py  diagnostics.py  dvl.py  ekf.py  events.py  gps.py  gps_raw.py  imu.py  magnetometer.py  odometer.py  position.py  ptp.py  rtcm.py  session_info.py  ship_motion.py  status.py  usbl.py  utc_time.py  velocity.py  vibration.py
sbg_ellipsd/protocol/: __init__.py  constants.py  crc.py  framer.py  parser.py
utils/: check_ticks.py  raw_dump.py  test_listeners.py  test_serial.py
